# gfi2_python

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
gfi2/: __init__.py  calibrate.py  gfi.py  io.py  metrics.py  network.py  pipeline.py  preprocess.py  tracing.py  viz.py
notebooks/: GFI2_Analysis.ipynb  GFI2_Colab.ipynb
